--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 absl-py==1.0.0
 astor==0.8.1
+cached-property==1.5.2
 click==8.0.3
 colorama==0.4.4
 dataclasses==0.8
 Flask==2.0.2
 gast==0.5.3
 grpcio==1.42.0
-gunicorn==20.1.0
 h5py==2.10.0
 importlib-metadata==4.8.2
 itsdangerous==2.0.1
@@ -16,10 +16,13 @@ Keras-Applications==1.0.4
 Keras-Preprocessing==1.0.2
 Markdown==3.3.6
 MarkupSafe==2.0.1
-numpy==1.14.5
+numpy==1.19.5
+pandas==1.1.5
 protobuf==3.19.1
 PyMySQL==1.0.2
 pyphen==0.11.0
+python-dateutil==2.8.2
+pytz==2021.3
 PyYAML==6.0
 scipy==1.5.4
 six==1.16.0
@@ -29,4 +32,5 @@ termcolor==1.1.0
 textstat==0.7.2
 typing-extensions==4.0.1
 Werkzeug==2.0.2
+xgboost==1.5.2
 zipp==3.6.0
