--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,24 @@
 absl-py==1.0.0
 astor==0.8.1
+astunparse==1.6.3
 cached-property==1.5.2
+cachetools==4.2.4
+certifi==2021.10.8
+charset-normalizer==2.0.11
+clang==5.0
 click==8.0.3
 colorama==0.4.4
 dataclasses==0.8
 Flask==2.0.2
+flatbuffers==1.12
 gast==0.2.2
+google-auth==2.6.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
 grpcio==1.42.0
+gunicorn==20.1.0
 h5py==2.10.0
+idna==3.3
 importlib-metadata==4.8.2
 itsdangerous==2.0.1
 Jinja2==3.0.3
@@ -17,20 +28,32 @@ Keras-Preprocessing==1.0.2
 Markdown==3.3.6
 MarkupSafe==2.0.1
 numpy==1.14.5
+oauthlib==3.2.0
+opt-einsum==3.3.0
 pandas==1.0.5
 protobuf==3.19.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 PyMySQL==1.0.2
 pyphen==0.11.0
 python-dateutil==2.8.2
 pytz==2021.3
 PyYAML==6.0
+requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.8
 scipy==1.5.4
 six==1.16.0
 tensorboard==1.10.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
 tensorflow==1.10.0
+tensorflow-estimator==1.15.1
 termcolor==1.1.0
 textstat==0.7.2
 typing-extensions==4.0.1
+urllib3==1.26.8
 Werkzeug==2.0.2
+wrapt==1.12.1
 xgboost==1.5.2
 zipp==3.6.0
